# software_get_started

./: .gitignore  CMakeLists.txt  README.rst  general_resources.rst  personal_commands.txt
ROOT_tutorial/: README.rst
R_tutorial/: README.rst
bash_tutorial/: README.rst  bash_examples.rst  bashrc_functions.rst
bash_tutorial/start_here/: tuto_0.rst
bayeux_tutorial/: README.rst
boost_tutorial/: README.rst
cmake_tutorial/: Copyright.txt  README.rst
containers_tutorial/: README.rst
cpp_tutorial/: CMakeLists.txt  README.rst
cpp_tutorial/src/: string.cxx  vector.cxx
documentation_tutorial/: README.rst  markdown_cheatsheet.md  markdown_example.rst  pandoc_tutorial.rst  restructured_text_example.rst  restructured_text_tutorial.rst  rst_cheatsheet.rst
doxygen_tutorial/: README.rst
falaise_tutorial/: README.rst
geant4_tutorial/: README.rst
git_tutorial/: README.rst
latex_tutorial/: README.rst
latex_tutorial/article_skeleton/: GNUmakefile  README.rst  bibliography.bib  main_article.tex
latex_tutorial/article_skeleton/sections/: acknowledgments.tex  conclusion.tex  introduction.tex  section_1.tex  section_2.tex  section_3.tex
latex_tutorial/book_skeleton/: GNUmakefile  README.rst  main.tex  packages.tex
latex_tutorial/book_skeleton/chapter_1/: chap_1.tex
latex_tutorial/book_skeleton/chapter_2/: chap_2.tex
latex_tutorial/book_skeleton/chapter_3/: chap_3.tex
latex_tutorial/book_skeleton/others/: abstract.tex  annexes.tex  conclusion.tex  introduction.tex
latex_tutorial/cv_skeleton/: README.rst  cover_letter.tex  cv_en.tex
latex_tutorial/presentation_skeleton/: Makefile  README.rst  slides.tex
latex_tutorial/thesis_skeleton/: CommandesPerso.tex  GNUmakefile  Main.tex  Preambule.tex  README.rst  biblio.bib  francaisbst.tex
latex_tutorial/thesis_skeleton/Chapitre_1/: chap_1.tex
latex_tutorial/thesis_skeleton/Chapitre_2/: chap_2.tex
latex_tutorial/thesis_skeleton/Chapitre_3/: chap_3.tex
latex_tutorial/thesis_skeleton/Chapitre_4/: chap_4.tex
latex_tutorial/thesis_skeleton/Chapitre_5/: chap_5.tex
latex_tutorial/thesis_skeleton/Chapitre_6/: chap_6.tex
latex_tutorial/thesis_skeleton/Others/: abstract.tex  annexes.tex  conclusion.tex  intro.tex  pagedegarde.tex  remerciements.tex
python_jupyter_notebooks_tutorial/: README.rst
python_matplotlib_tutorial/: README.md  README.rst
python_numpy_tutorial/: README.rst
python_pandas_tutorial/: README.rst
python_root_tutorial/: README.rst
python_tutorial/: README.rst
slack_tutorial/: README.rst
supernemo_shifters_tutorial/: README.rst
text_editor_tutorial/emacs_tutorial/: README.rst
text_editor_tutorial/vim_tutorial/: README.rst
(+3 files in other folders)
